hibakereses jegyzetek bovultek forditasi es linkelesi parancssor leirassal

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
 project(game CXX)
 
+set(CMAKE_VERBOSE_MAKEFILE ON)
+
 find_package(engine REQUIRED CONFIG)
 
 add_executable(game src/game.cpp src/main.cpp)
