--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.15)
 project(engine CXX)
 
+include(CTest)
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(log4cxx REQUIRED CONFIG)
@@ -12,3 +14,7 @@ target_link_libraries(engine PRIVATE log4cxx)
 
 set_target_properties(engine PROPERTIES PUBLIC_HEADER "include/engine.h")
 install(TARGETS engine)
+
+if (BUILD_TESTING)
+  add_subdirectory(test)
+endif()
